--- a/client/pom.xml
+++ b/client/pom.xml
@@ -71,7 +71,7 @@
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.lz4</groupId>
+      <groupId>${lz4-java.group}</groupId>
       <artifactId>lz4-java</artifactId>
     </dependency>
     <dependency>
