--- a/client-tez/tez-shaded/pom.xml
+++ b/client-tez/tez-shaded/pom.xml
@@ -94,7 +94,7 @@
               <include>org.roaringbitmap:RoaringBitmap</include>
               <include>org.scala-lang:scala-library</include>
               <include>org.scala-lang:scala-reflect</include>
-              <include>org.lz4:lz4-java</include>
+              <include>at.yawk.lz4:lz4-java</include>
               <include>io.dropwizard.metrics:metrics-core</include>
               <include>com.codahale.metrics:metrics-core</include>
               <include>com.github.luben:zstd-jni</include>
